name:                elephant-pig
version:             0.1.0.0
synopsis:            Find words made from a specified letter set
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Itai Zukerman
maintainer:          zukerman@math-hat.com
build-type:          Simple
cabal-version:       >=1.10

executable elephant-pig
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010